# dict-rust

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/args/: mod.rs
src/fetch/: mod.rs
src/parse/: mod.rs
